  wound.  For example, if you pull the arrow out, and leave the head embedded
  in, they can now have the head left in their grave when they die. Part of
  jasonrohrer/OneLifeData7#1047

--Fixed so server looks for camera-on-camera transition when taking photo,
  instead of player-on-camera transition, so the player can't interrupt the
   process by clicking on the camera again mid-photo.  Part of
   jasonrohrer/OneLifeData7#1060




Version 391    2023-September-15

--Fixed visual glitch when paved road hugged nearby walls.  Fixes #921

--Sprite layers that are marked as drawn behind player are now drawn as a
  separate layer scene-wide (above biome and floor, behind everything else).
  This allows thing to be drawn under overhanging open doors in layer to north.
  I'm pretty sure that every sprite layer marked as drawn behind is a flat
  layer that lays on the ground, and that this won't cause any other visual
  problems.  Part of jasonrohrer/OneLifeData7#1038

--Fixed photoCache compiling on mac.




Editor Fixes:

--Fixed bug in held-position view in EditObjectPage due to failure to
  initialize +containOffsets in local copy of object.

--Fixed bug in mCellSpriteVarSlider visibility in Scene Editor that was
  making mCellSpriteVanishSlider invisible too.  Can now correctly pick
  various use states for objects in scenes again.

--Fixed scene editor to allow variable uses displayed in contained objects (but
  not in sub-contained objects, for now).  This is correctly saved into the
  scene file format (but the code can still read the older style that doesn't
  have these extra fields).

--Fixed bug in maintaining producesMap in transition bank that was causing
  duplicate transitions to appear in transition editor searches.



Server Fixes

--New +containOffset tags were being treated like +contFoodDish tags and
  blocking containment.  Fixes #913

--Twins that follow the lead twin to the tutorial area no longer have their